# brisk

./: CMakeLists.txt  LICENSE
agast/: CMakeLists.txt
agast/include/agast/: wrap-opencv.h
cmake/: briskConfig.cmake.in  briskConfig.hpp.in
include/brisk/: brisk-descriptor-extractor.h  brisk-feature-detector.h  brisk-feature.h  brisk.h  brute-force-matcher.h  command-line-parser.h  harris-feature-detector.h  harris-score-calculator.h  scale-space-feature-detector.h
include/brisk/internal/: brisk-layer.h  brisk-scale-space.h  hamming-inl.h  hamming.h  harris-score-calculator-float.h  harris-scores.h  helper-structures.h  image-down-sampling.h  integral-image.h  macros.h  neon-helpers.h  pattern-provider.h  scale-space-layer-inl.h  scale-space-layer.h  score-calculator.h  uniformity-enforcement-inl.h  uniformity-enforcement.h  vectorized-filters-inl.h  vectorized-filters.h
include/sse2neon/: SSE2NEON.h
src/: brisk-descriptor-extractor.cc  brisk-feature-detector.cc  brisk-layer.cc  brisk-scale-space.cc  brute-force-matcher.cc  demo-free.cc  demo.cc  harris-feature-detector.cc  harris-score-calculator-float.cc  harris-score-calculator.cc  harris-scores.cc  image-down-sampling.cc  pattern-provider.cc  vectorized-filters.cc
